--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "Granite";
+  src: local("Granite"),
+    url("./fonts/Granite.ttf") format("truetype");
+  font-weight: normal;
+}
